@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST flog-2.2.0.gem 38912 RMD160 89981c134c63afac9a99d86e74884c1a649ce176 SHA1 9f8f3e34b157854c6ec92f52302395473e0ac13c SHA256 de8ddceecc4cdcb1a85d7491fed2250c854c4ed1d3884cc2602701d61cc59c1a
+DIST flog-2.4.0.gem 18944 RMD160 aba46754188b90f464acf8088ccf84e52c4b696d SHA1 8cd922591ebe6ac37a50d28022b33e7847927683 SHA256 2bbf984d6a326463f496f20b49333b58c064da80f1a388e2b0e53ec50c9ede4d
 EBUILD flog-2.2.0.ebuild 507 RMD160 e8987a6c2dcef86dcc660f6ff059cb4de7bc3a14 SHA1 0c9a1cf837cc75b6dd616c4be6a8b4fd3767bc45 SHA256 869f3f1c8c7456a1063ce491e43c52c2087097fb5a19b37bd5706358c62699da
-MISC ChangeLog 458 RMD160 ee118c01e0d6f7e800c675918f3a3ab2fd1e28bd SHA1 76fa683ae089725c16cf3b5eec01f25c477e243d SHA256 fc997bd8be85a27d0dbc751bbf9dc452ee9a822be48097d4ca57cd456426e941
+EBUILD flog-2.4.0.ebuild 627 RMD160 5210a01c42a7a079f8c9f908cef0dfb5c0a794b9 SHA1 943631187727cf6007ab122f10f0c5526ab9b322 SHA256 044aae907fd6a90b36d76e82fb6afbda9873f781bb06d58e5103aa48bd00c6ed
+MISC ChangeLog 613 RMD160 8ab86e09e2766842cb7885e9c816ef9bf4a85c6f SHA1 7dd54286c0a521c47e6380b3f9912af1971101fc SHA256 4263de57bb6664b497194c8b23dec669850bdb0ff7040bfdc4287ae796c7c605
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAks3huYACgkQeM7EJeUH71PNbACeJh3qsM7dNnKKMqsdrZrajs2f
-+B0AniRB+9HA08tUHBqqscO9eGK1Lc66
-=8yo2
+iEYEARECAAYFAks4cSAACgkQeM7EJeUH71N/ZgCfbitInpQE43S+6HEO8RTUTci+
+awoAoIrRc1N7CNsHIa1wm7/83bxeWCS+
+=0Ys3
 -----END PGP SIGNATURE-----
