@@ -1,0 +1,24 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/zentest-3.3.0.ebuild,v 1.1 2006/08/28 14:34:06 pclouds Exp $
+
+EAPI="2"
+USE_RUBY="ruby18"
+
+RUBY_FAKEGEM_TASK_DOC="docs"
+RUBY_FAKEGEM_DOCDIR="doc"
+RUBY_FAKEGEM_EXTRADOC="History.txt README.txt"
+
+inherit ruby-fakegem
+
+DESCRIPTION="Flog reports the most tortured code in an easy to read pain report."
+HOMEPAGE="http://ruby.sadi.st/"
+LICENSE="MIT"
+
+KEYWORDS="~x86 ~amd64"
+SLOT="0"
+IUSE=""
+
+DEPEND="=dev-ruby/ruby_parser-2*
+	=dev-ruby/sexp-processor-3*"
+RDEPEND="${DEPEND}"
